2002-03-10  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* Makefile.am:
	Distribute gnome-pilot.m4

2002-02-10  Chema Celorio  <chema@celorio.com>

	* Port to the GNOME 2.0 platform

2002-02-08  Chema Celorio  <chema@celorio.com>

	* configure.in: 0.12.0 here we go
2001-12-11  Israel Escalante <israel@ximian.com>

	* Release 0.10.0.

2001-11-28  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* gnome-pilot.m4 (PILOT_LINK_HOOK):
	Fixed a typo: inlude -> include

2001-10-24  jacob berkman  <jacob@ximian.com>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): do a test that is not
	only always false, but works with autoconf 2.52 and isn't trying
	to be too smart

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Complete intltool support.

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Add intltool support.

2001-09-16  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	PISOCK_CFLAGS no longer contains pilot-link version.

2001-09-09  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	Stuff to check version of gnome-pilot

2001-08-20  Pavel Roskin  <proski@gnu.org>

	* gnome-undelfs.m4 (GNOME_UNDELFS_CHECKS): Specify additional
	includes when testing for ext2fs/ext2fs.h.

	* gnome-vfs.m4 (GNOME_WITH_VFS): Specify additional includes
	when testing for rpc/pmap_clnt.h.  Needed for Autoconf 2.50+
	only - older versions don't try to compile headers and ignore
	this argument.

2001-08-04  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Ignore generated .dep file.

2001-08-02  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* gnome-guile-checks.m4: Made "--without-guile" work. Added $guile_msg 
	  for reporting back.

2001-07-24  Jody Goldberg <jgoldberg@home.com>

	* psiconv.m4 : Add psion macros from Frodo Looijaard <frodol@dds.nl>

2001-07-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-print-check.m4 (AM_PATH_GNOME_PRINT): 
	Correct minimal version test

2001-06-22  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4: