@@ -1,3 +1,7 @@
+2002-05-15  JP Rosevear  <jpr@ximian.com>
+
+	* gnome-pilot.m4: Fix quoting for AC_MSG_*
+
 2002-03-10  Sebastian Rittau  <srittau@jroger.in-berlin.de>
 
 	* Makefile.am:
